src/kubernetes-manifests/commander.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-commander
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-commander
  template:
    metadata:
      labels:
        app: redis-commander
        tier: backend
    spec:
      containers:
        - name: redis-commander
          image: rediscommander/redis-commander
          ports:
            - name: redis-commander
              containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: redis-commander
  labels:
    app: redis-commander
    tier: backend
spec:
  ports:
    - port: 8081
      targetPort: redis-commander
      name: redis-commander
  selector:
    app: redis-commander
    tier: backend
