src/kubernetes-manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traffic-router
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          # - path: /
          #   backend:
          #     serviceName: frontend-service
          #     servicePort: 4001
          # - path: /vote
          #   backend:
          #     serviceName: voting-service
          #     servicePort: 4002
          # - path: /
          #   backend:
          #     serviceName: redis-commander
          #     servicePort: 8081
          - path: /
            backend:
              serviceName: redis-arena
              servicePort: 4567
